<resources>
    <string name="app_name">RestaurantOrder</string>
    <!--landing-->
    <string name="text_sign_up">Sign Up</string>
    <string name="text_full_name">Full name</string>
    <string name="text_date_of_birth">Date of birth</string>
    <string name="text_email">Email</string>
    <string name="text_phone_number">Phone number</string>
    <string name="text_back_to">Back to \u0020</string>
    <string name="text_sign_up_underline"><u>Sign Up</u></string>
    <string name="text_sign_in_underline"><u>Sign In</u></string>
    <string name="text_confirmed_password">Confirmed password</string>
    <string name="text_password">Password</string>
    <string name="text_sign_in">Sign In</string>
    <string name="text_have_account_yet">Do not have an account?\u0020</string>
    <string name="text_sign_up_success">Registration Successful</string>
    <string name="text_sign_up_existed">Email address has already been registered</string>
    <string name="text_sign_up_failed">Registration failed. Please try again later</string>
    <string name="text_sign_in_failed">Sign in failed. Please check your email or password again</string>
    <!--drawer-->
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="action_menu">Menu</string>
    <string name="text_more">More</string>
    <string name="action_sign_out">Sign Out</string>
    <!--add_menu-->
    <string name="text_title_add_menu">Add New Menu</string>
    <string name="text_upload_image"><u>Upload Image</u></string>
    <string name="text_enter_menu_name">Enter menu name</string>
    <string name="text_add_menu_failed">Menu is not added. Try again please!</string>
    <string name="text_add_menu_success">Menu is added</string>
    <string name="text_notify_upload_image">Please choose an image</string>
    <!--add_item-->
    <string name="text_title_add_item">Add New Item</string>
    <string name="text_add_item_failed">Item is not added. Try again please!</string>
    <string name="text_add_item_success">Item is added</string>
    <string name="text_choose_item_menu">Choose Item Menu</string>
    <string name="text_enter_item_name">Enter item name</string>
    <string name="text_enter_price">Enter price</string>
    <string name="text_write_some_description">Write some description . . .</string>
    <string name="text_notify_choose_menu">Please choose a menu</string>
    <!--facebook-->
    <string name="facebook_app_id">2285342594856895</string>
    <string name="fb_login_protocol_scheme">fb2285342594856895</string>
    <!--user_home-->
    <string name="text_what_would_you_like">What would you like?</string>
    <string name="text_make_an_order">Make an order</string>
    <string name="text_reserve_a_table">Reserve a table</string>
    <string name="action_home">Home</string>
    <!--table-->
    <string name="action_table">Table</string>
    <string name="action_add_new_table">Add new table</string>
    <string name="text_enter_table_number">Enter table number</string>
    <string name="text_add_table_failed">Table is not added. Try again please!</string>
    <string name="text_add_table_success">Table is added</string>
    <string name="text_save">Save</string>
    <string name="text_table_type">Type of Table</string>
    <string name="text_notify_choose_table_type">Please choose a type of table</string>
    <string name="text_date_format">dd/mm/yyyy</string>
    <string name="text_date_not_valid">Date is not valid. Please pick again.</string>
    <string name="text_time_not_valid">Time is not valid. Please pick again.</string>
    <string name="text_notify_pick_date_first">Please pick date first</string>
    <string name="text_reserve">Reserve</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_inform_input_all_fields_dialog_reserve">Please input all fields for convenient. We will contact to you as soon as receive your reservation.</string>
    <string name="text_from">\u0020From\u0020</string>
    <string name="text_from_not_cap">\u0020from\u0020</string>
    <string name="text_to">\u0020to\u0020</string>
    <string name="text_number">Table number:\u0020</string>
    <string name="text_notifty_select_time_reserve">Please select time you want!</string>
    <string name="text_ok">OK</string>
    <string name="text_reserve_table_failed">Maybe has something wrong. Try again later!</string>
    <string name="text_inform_reserve_success">Your reservation has been sent to us. We will contact to you as soon as possible. Thank you!</string>
    <string name="text_on">On</string>
    <string name="text_off">Off</string>
    <string name="text_existed_reservation">Reservation has already existed!</string>
    <!--add_item-->
    <string name="text_add_to_cart">Add to cart</string>
    <string name="text_close">Close</string>
    <string name="text_plus">+</string>
    <string name="text_minus">-</string>
    <string name="text_0">0</string>
    <string name="text_quantity">Quantity</string>
    <string name="text_phone">Phone:\u0020</string>
    <string name="text_time_booking">Time booking:\u0020</string>
    <string name="text_email_booking">Email:\u0020</string>
    <string name="text_name">Name:\u0020</string>
    <string name="text_cart_empty">Nothing on your cart</string>
    <string name="text_inform_order_success">We have got your orders. We will contact to you to confirm after few minutes.</string>
    <string name="text_inform_order_failed">Some thing has been wrong. Try it later!</string>
    <string name="action_cart">Your cart</string>
    <!--admin_cart-->
    <string name="text_customer">Customer:\u0020</string>
    <string name="text_order_time">Order Time:\u0020</string>
    <string name="text_payment">Payment:\u0020</string>
    <string name="text_item">Item</string>
    <string name="text_price">Price</string>
    <string name="text_cart_id">Cart ID:\u0020</string>
    <string name="text_status">Status:\u0020</string>
    <string name="action_your_orders">Your Orders</string>
    <string name="action_all_orders">All orders</string>
    <string name="text_negative">Negative</string>
    <string name="text_positive">Positive</string>
    <string name="text_inform_cannot_delete">Your order has been preparing. You can not cancel.</string>
    <string name="text_ask_delete">Are you sure to delete this order?</string>
    <string name="text_delete">Delete</string>
    <!--bill-->
    <string name="text_bill_quantity">Quantity:\u0020</string>
    <string name="text_bill_price">Price\u0020</string>
    <string name="text_bill_table_type">Table type\u0020</string>
    <string name="text_bill_item">Item:\u0020</string>
    <!--menu-->
    <string name="action_search">Search</string>
    <string name="text_send">Send</string>
    <string name="text_canceled">Canceled</string>
    <string name="text_paid">Paid</string>
    <string name="text_distributed">Distributed</string>
    <string name="text_in_progress">In Progress</string>
    <!--statistics-->
    <string name="action_statistics">Statistics</string>
    <string name="text_chart_income_fokllowing_cart">Income following carts</string>
    <string name="text_search_statistics">Year statistics...</string>
    <string name="text_tap_to_show">Tap to show chart</string>
</resources>
