<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <!--<item-->
            <!--android:id="@+id/action_home"-->
            <!--android:icon="@drawable/ic_home"-->
            <!--android:title="@string/action_home" />-->
        <item
            android:id="@+id/action_all_orders"
            android:icon="@drawable/ic_order_details"
            android:title="@string/action_all_orders" />
        <item
            android:id="@+id/action_menu"
            android:icon="@drawable/ic_menu"
            android:title="@string/action_menu" />
        <item
            android:id="@+id/action_table"
            android:icon="@drawable/ic_table"
            android:title="@string/action_table" />
        <item
            android:id="@+id/action_statistics"
            android:icon="@drawable/ic_statistics"
            android:title="@string/action_statistics" />
    </group>

    <item android:title="@string/text_more">
        <menu>
            <item
                android:id="@+id/action_sign_out"
                android:icon="@drawable/ic_sign_out"
                android:title="@string/action_sign_out" />
        </menu>
    </item>
</menu>
