<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_home"
            android:icon="@drawable/ic_home"
            android:title="@string/action_home" />
        <item
            android:id="@+id/action_order_detail"
            android:icon="@drawable/ic_order_details"
            android:title="@string/action_your_orders" />
    </group>

    <item android:title="@string/text_more">
        <menu>
            <item
                android:id="@+id/action_sign_out"
                android:icon="@drawable/ic_sign_out"
                android:title="@string/action_sign_out" />
        </menu>
    </item>
</menu>
