<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="listener"
            type="com.e15cn2.restaurantorder.screen.main.user.reserve_table.ReserveTableDialogFragment" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dp_16">

        <TextView
            android:id="@+id/textView8"
            style="@android:style/TextAppearance.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_inform_input_all_fields_dialog_reserve"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_table"
            style="@android:style/TextAppearance.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_weight="1"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_date"
            style="@android:style/TextAppearance.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_weight="1"
            android:background="@android:drawable/edit_text"
            android:drawableLeft="@drawable/ic_date_orange_small"
            android:drawablePadding="@dimen/dp_8"
            android:ellipsize="end"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/text_date_format"
            android:inputType="datetime"
            android:maxLines="1"
            android:onClick="@{()->listener.showDatePicker()}" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView18"
                    style="@android:style/TextAppearance.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/dp_8"
                    android:gravity="center_vertical"
                    android:text="@string/text_from"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/text_from"
                    style="@android:style/TextAppearance.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/edit_text"
                    android:gravity="center_vertical"
                    android:hint="00 : 00"
                    android:onClick="@{()->listener.onFromClick()}" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_8"
                android:gravity="start"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text"
                    style="@android:style/TextAppearance.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/dp_8"
                    android:gravity="center_vertical"
                    android:text="@string/text_to"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/text_to"
                    style="@android:style/TextAppearance.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/edit_text"
                    android:gravity="center_vertical"
                    android:hint="00 : 00"
                    android:onClick="@{()->listener.onToClick()}" />
            </LinearLayout>
        </LinearLayout>

        <EditText
            android:id="@+id/text_phone"
            style="@android:style/TextAppearance.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:background="@android:drawable/edit_text"
            android:drawableLeft="@drawable/ic_phone_orange_small"
            android:drawablePadding="@dimen/dp_8"
            android:ellipsize="end"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/text_phone_number"
            android:inputType="phone"
            android:maxLines="1"
            android:padding="@dimen/dp_8" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_32"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_cancel"
                style="@android:style/TextAppearance.Medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_button_landing"
                android:onClick="@{()->listener.onCancel()}"
                android:text="@string/text_cancel"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/button_reserve"
                style="@android:style/TextAppearance.Medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_16"
                android:layout_weight="1"
                android:background="@drawable/bg_button_landing"
                android:onClick="@{()->listener.onReserve()}"
                android:text="@string/text_reserve"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </LinearLayout>
</layout>